--- a/src/pages/main/ProgressPage.css
+++ b/src/pages/main/ProgressPage.css
@@ -1,3 +1,10 @@
+#root, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
 .progress-page-bg {
   width: 100%;
   min-height: 100vh;
